ElasticSearchUtil added and changes made